--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
 hr {
 	border: none;
 	height: 2px;
-	background-color: rgb(213,213,213);
+	background-color: rgb(218,218,218);
 	margin: 0px;
 }
 
@@ -38,7 +38,6 @@ hr {
 	margin-bottom: 13px;
 }
 
-/* rename to margin */
 .content{
 	margin-right: 3mm;
 	margin-top: 3mm;
@@ -50,14 +49,15 @@ hr {
 	background: #ffe8c0;
 	outline: auto;
 	outline-color: #ca6760;
-	margin-right: 4mm;
+	margin: 20px;
+	padding: 7px;
 	color: #000000;
 	float: right;
 }
 
-input, select, textarea{
+input.pay-det, select, textarea{
 	border: 1.5px solid rgb(213,213,213);
-	border-radius: 7px;
+	border-radius: 5px;
 	padding: 5px;
 }
 
@@ -65,14 +65,17 @@ select{
 	width: 300px;
 }
 
-textarea{
+textarea {
 	width: 500px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 input:focus, select:focus, textarea:focus{
 	outline: none;
 	border-color: dodgerblue;
 }
+
+
 
 /*
 	font - Helvetica Neue
@@ -105,5 +108,81 @@ input:focus, select:focus, textarea:focus{
 	grid-template-columns: 1fr 7fr;
 	column-gap: 15px;
 	grid-row-gap: 10px;
+	align-items: center;
 }
 
+/* Procedural Code Table Styling & Grid */
+
+.proc-code-grid {
+	display: grid;
+	grid-template-columns: 40px 1fr minmax(600px,auto) repeat(5,1fr);
+	width: 100%;
+/*	grid-gap: 1px 1px;*/
+}
+
+.proc-code-grid-item {
+	border: 1px solid rgb(218,218,218);
+	padding: 6px;
+/*	center vertically*/
+/*	margin: auto 0 */
+}
+
+.proc-code-header {
+	font-weight: bold;
+	background: #e1e8ed;
+}
+
+.proc-code-total {
+	background: #ffefef;
+}
+
+.total-box {
+	grid-column-start: 1;
+	grid-column-end: 4;
+	font-weight: bold;
+}
+
+.pay-amt-grid-item {
+	border: 1px solid rgb(218,218,218);
+	padding: 2px;
+}
+
+.pay-amt-box {
+	width:100px;
+}
+
+.plus-icon-box {
+	display: grid;
+	grid-template-columns: 1fr 16px 1fr;
+}
+
+/* Check Box Styling */
+
+input[type="checkbox"] {
+	-webkit-appearance: none;
+	background-color: #ffffff;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 6px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+/*	margin-left: 4px;*/
+/*	margin-bottom: 0px;*/
+}
+
+input[type="checkbox"]:checked {
+	background-color: #ffffff;
+	border: 1px solid #adb8c0;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+	color: #99a1a7;
+}
+
+input[type="checkbox"]:checked:after {
+	content: '\2714';
+	font-size: 10px;
+	position: absolute;
+	top: -1px;
+	left: 2px;
+	color: #99a1a7;
+}
