--- a/main.css
+++ b/main.css
@@ -198,3 +198,16 @@ input[type="checkbox"]:checked:after {
 	left: 2px;
 	color: #99a1a7;
 }
+
+.sidenav {
+	height: 100%; /* 100% Full-height */
+	width: 0; /* 0 width - change this with JavaScript */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Stay on top */
+	top: 0; /* Stay at the top */
+	left: 0;
+	background-color: #fff; 
+	overflow-x: hidden; /* Disable horizontal scroll */
+	/*padding-top: 60px;*/ /* Place content 60px from the top */
+	transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
