--- a/main.css
+++ b/main.css
@@ -1,13 +1,14 @@
 .bar {
 	background: #147b8d;
 	font: 800;
-	color : #ffffff;
-	padding : 2mm;
+	color: #ffffff;
+	padding: 5px 6px 5px 12px;
+	font-weight: bold;
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
-	font-size: small;
+	font-family: 'Roboto', sans-serif;
+	font-size: 12px;
 	color: rgb(68, 81, 92);
 	margin: 0px;
 }
@@ -33,7 +34,6 @@ hr {
 }
 
 .greybox-hr {
-
 	margin-top: 13px;
 	margin-bottom: 13px;
 }
@@ -49,7 +49,7 @@ hr {
 	background: #ffe8c0;
 	outline: auto;
 	outline-color: #ca6760;
-	margin: 20px;
+	margin: 20px 0px 0px 20px;
 	padding: 6px;
 	color: #000000;
 	float: right;
@@ -113,7 +113,7 @@ label > span{
 
 .pay-container {
 	display: grid;
-	grid-template-columns: 1fr 7fr;
+	grid-template-columns: 2fr 13fr;
 	column-gap: 15px;
 	grid-row-gap: 10px;
 	align-items: center;
@@ -157,13 +157,36 @@ label > span{
 	width: 100px;
 	height: 15px;
 	margin-bottom: 0px;
-	/*	float:right;*/
 }
 
 .plus-icon-box {
 	display: grid;
 	grid-template-columns: 1fr 16px 1fr;
 	padding: 5px 3px 0px 5px !important;
+}
+
+/* Payment Info Modal Box*/
+
+.payment-details {
+	display: none;  
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);  /*Fallback color */
+	background-color: rgba(0,0,0,0.4);  /*Black w/ opacity*/ 
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto; /* 15% from the top and centered */
+	border: 1px solid #888;
+	width: 32%;
+	background-color: #fff;
+	box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
 }
 
 /* Check Box Styling */
@@ -178,9 +201,6 @@ input[type="checkbox"] {
 	display: inline-block;
 	position: relative;
 	margin: 0px 0px 0px 6px;
-/*	text-align:center;*/
-/*	margin-left: 4px;*/
-/*	margin-bottom: 0px;*/
 }
 
 input[type="checkbox"]:checked {
@@ -199,15 +219,14 @@ input[type="checkbox"]:checked:after {
 	color: #99a1a7;
 }
 
-.sidenav {
-	height: 100%; /* 100% Full-height */
-	width: 0; /* 0 width - change this with JavaScript */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Stay on top */
-	top: 0; /* Stay at the top */
-	left: 0;
+/* Slider Styling */
+
+.slider {
+	height: 100%;
+	width: 0; /* changed with JavaScript */
+	position: fixed;
+	z-index: 1;	top: 0;	left: 0;
 	background-color: #fff; 
 	overflow-x: hidden; /* Disable horizontal scroll */
-	/*padding-top: 60px;*/ /* Place content 60px from the top */
 	transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
